devops/k8s/webapi.tpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: 783560535431.dkr.ecr.ap-southeast-1.amazonaws.com/learn-github-actions:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m

---
kind: Service
apiVersion: v1
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  selector:
    app: webapi
  ports:
  - protocol: TCP
    port: 80
