devops/k8s/ingress-eks.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
    component: frontend
  name: ingress-webapi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # your subnets of instance, public subnets
    alb.ingress.kubernetes.io/subnets: 'subnet-0ab0cda7c2ae7d11c, subnet-00cfca49cd9dddf44, subnet-0fb1bf9a089cdc28d'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: 'sg-04d561bfb74b29aeb, sg-016f24903b4c4b6de'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapp-service
            port:
              number: 80

      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 80
